Add ruby extension settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -25,5 +25,16 @@
         "editor.rulers": [
             120
         ]
-    }
+    },
+
+    // Language Extension Settings
+    "ruby.useBundler": true,
+    "ruby.useLanguageServer": true,
+    "ruby.lint": {
+        "rubocop": {
+            "useBundler": true
+        }
+    },
+    "ruby.format": "rubocop",
+    "ruby.intellisense": "rubyLocate"
 }
